@@ -55,7 +55,7 @@ case 'changepassword':
 		if (sizeof(db_fetch_assoc("select user_auth_realm.realm_id from user_auth_realm where user_auth_realm.user_id = '" . $_SESSION["sess_user_id"] . "' and user_auth_realm.realm_id = '" . $realm_id . "'")) > 0) {
 			switch ($user["login_opts"]) {
 				case AUTH_LOGIN_OPT_REFER: /* referer */
-					header("Location: " . get_request_var_post("ref")); break;
+					header("Location: " . sanitize_search_string(get_request_var_post("ref"))); break;
 				case AUTH_LOGIN_OPT_CONSOLE: /* default console page */
 					header("Location: index.php"); break;
 				case AUTH_LOGIN_OPT_GRAPH: /* default graph page */
@@ -127,7 +127,7 @@ case 'changepassword':
 				</tr>
 			</table>
 			<input type="hidden" name="action" value="changepassword">
-			<input type="hidden" name="ref" value="<?php print $_REQUEST["ref"];?>">
+			<input type="hidden" name="ref" value="<?php print sanitize_search_string($_REQUEST["ref"]);?>">
 			</form>
 		</div>
 		<div id='authFooter'></div>
